# software-workflow-intro

./: README  README.md  Readme  lbeltran.py  logging_multiprocess.py  main.py  package.xml  project_publisher.py  project_subscriber.py  setup.py  test  test.cpp
IntroWorkSpaceDanny/install/: local_setup.sh  setup.sh
IntroWorkSpaceHectorAnaya/install/: local_setup.sh  setup.sh
IntroWorkSpaceHectorAnaya/log/: latest_build
IntroWorkSpaceRemingtonSteele/install/: local_setup.sh  setup.sh
IntroWorkSpaceTalor/: .swp
IntroWorkSpaceTalor/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
cpp_pubsub/: CMakeLists.txt  package.xml
cpp_pubsub/src/: publisher_member_function.cpp  subscriber_member_function.cpp
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
log/: latest_build  latest_test
py_pubsub/: time_publisher.py  time_subscriber.py
src/: Graphing Utility.py  git_guide.md  graphing_utility.py  python_setup_guide.md  styling_guide.md
src/example/: styling_guide_ex_0.py  styling_guide_ex_1.py  styling_guide_ex_2.py  styling_guide_ex_3.c  styling_guide_ex_4.py
src/guides/: styling_guide.md
src/install/: local_setup.sh  setup.sh
src/log/: latest_build
src/package1/: CMakeLists.txt  package.xml
src/package1/src/: convert_time_client.cpp  publisher_member_function.cpp
src/package2/: CMakeLists.txt  package.xml
src/package2/src/: subscriber_member_function.cpp
src/projects/: FPSOverlayOpenCV.py  blank_project.py  documetation.txt  ffmpegVideoStream Documentation.txt  ffmpegVideoStream.py  frame_extractor.py  graphing_utility.py  lbeltran.py  logging_driver_sim.py  logging_multiprocess.py  main.py  pid_controller.py  socket_client.py  socket_server.py  targeting_system.py
src/py_pubsub/: setup.py
src/submissions/: IntroProjectText.txt  Receiver.py  Sender.py  kbell.py  (+8 more)
storage/: convert_time_client.cpp  convert_time_server.cpp
submission/: yizaguirre.py
submissions/: Documentation- frameRate.docx  JoshVanDoren_First-task.py  Multi.py  RecruitProject.py  Recruitproject.py  abhargava.py  anorderhaug.py  ayakkali.py  bberk.py  clarmer.py  create_cam.py  dhood.py  iravenscroft.py  ireichard.py  kkakkary.py  lburg.py  main.py  rmcgregor.py  snampalli.py  ssaqan.py  submission-jakhter.py  submission-jwu.py  submission-kphillips  template.py  ttrinh.py
(+405 files in other folders)
